fix css/js ajour scrollbar perso et js animation

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,6 +18,7 @@ h1,p{
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    opacity: 0;
 }
 
 header,ul,footer{
@@ -45,5 +46,43 @@ main {
 }
 footer{
     padding-bottom: 25px;
+}
+#myImg {
+    opacity: 0;
+    overflow: hidden;
+    border-radius: 50%;
+}
+
+.slideUp {
+    visibility: visible;
+    animation: slideUp 2s forwards;
+}
+
+@keyframes slideUp {
+    0% {
+        opacity: 0;
+        transform: translateY(-100%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0%);
+    }
+}
+::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #000000;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #ef5734;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #F1F1F1;
 }
 
